Advancing to 2.1.0-SNAPSHOT, setting min req to JDK 1.8, upgrading Tycho and CXF