@@ -278,7 +278,7 @@ ORYX.Editor.createByUrl = function(modelUrl){"/>
                   <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
                   <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
 
-                  <cargo.jvmargs>-noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m</cargo.jvmargs>
+                  <cargo.jvmargs>-noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC</cargo.jvmargs>
                 </properties>
               </configuration>
               <deployables>
