@@ -26,7 +26,7 @@ under the License.
 
   <groupId>org.apache.syncope</groupId>
   <artifactId>syncope</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
@@ -356,7 +356,7 @@ under the License.
     <connid.ldap.version>1.5.1</connid.ldap.version>
     <connid.ad.version>1.3.2</connid.ad.version>
 
-    <cxf.version>3.1.7</cxf.version>
+    <cxf.version>3.2.0-SNAPSHOT</cxf.version>
 
     <camel.version>2.17.3</camel.version>	
 
@@ -440,7 +440,7 @@ under the License.
     <izpack.version>5.0.10</izpack.version>
     <httpclient.version>4.3.6</httpclient.version>
     <maven-invoker.version>2.1.1</maven-invoker.version>
-    <tycho-version>0.23.1</tycho-version>
+    <tycho-version>0.26.0</tycho-version>
 
     <testds.port>1389</testds.port>
     <testdb.webport>9082</testdb.webport>
@@ -475,7 +475,7 @@ under the License.
     <anonymousKey>anonymousKey</anonymousKey>
     <secretKey>1abcdefghilmnopqrstuvz2!</secretKey>
 
-    <targetJdk>1.7</targetJdk>
+    <targetJdk>1.8</targetJdk>
     <rootpom.basedir>${basedir}</rootpom.basedir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -1551,7 +1551,7 @@ under the License.
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <encoding>utf-8</encoding>
             <runOrder>alphabetical</runOrder>
-            <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xss256k</argLine>
+            <argLine>-Xms512m -Xmx1024m -Xss256k</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -1562,7 +1562,7 @@ under the License.
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <encoding>utf-8</encoding>
             <runOrder>alphabetical</runOrder>
-            <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xss256k</argLine>
+            <argLine>-Xms512m -Xmx1024m -Xss256k</argLine>
           </configuration>
           <executions>
             <execution>
